docs: build pkgdown

--- a/.gitignore
+++ b/.gitignore
@@ -39,12 +39,10 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 
-# pkgdown site
-docs/
-
 # translation temp files
 po/*~
 
 # RStudio Connect folder
 rsconnect/
 .Rproj.user
+.DS_Store
