--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,7 @@
 url: ~
 template:
   bootstrap: 5
-
+  navbar:
+    structure:
+      left: [intro, reference, articles, tutorials, news]
+      right: [search, github]
