--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gemini.R
 Title: R package to use Google's gemini via API on R
-Version: 0.3.0
+Version: 0.4.0
 Authors@R: 
     person("Jinhwan", "Kim", , "hwanistic@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0009-3217-2417"))
@@ -13,8 +13,9 @@ URL: https://github.com/jhk0530/gemini.R
 BugReports: https://github.com/jhk0530/gemini.R/issues
 Encoding: UTF-8
 Imports: 
-    httr,
-    base64enc
+    base64enc,
+    cli,
+    httr2
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Suggests: 
