--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,19 @@ export(gemini_chat)
 export(gemini_image)
 export(setAPI)
 importFrom(base64enc,base64encode)
+importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_div)
+importFrom(cli,cli_end)
+importFrom(cli,cli_status)
+importFrom(cli,cli_status_clear)
 importFrom(httr,POST)
 importFrom(httr,content)
 importFrom(httr,content_type_json)
+importFrom(httr2,req_body_json)
+importFrom(httr2,req_headers)
+importFrom(httr2,req_perform)
+importFrom(httr2,req_url_query)
+importFrom(httr2,request)
+importFrom(httr2,resp_body_json)
