--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: gemini.R
-Title: R package to use Google's gemini via API on R
+Title: Interface for Google Gemini API in R
 Version: 0.5.0
 Authors@R: 
-    person("Jinhwan", "Kim", , "hwanistic@gmail.com", role = c("aut", "cre"),
+    person("Jinhwan", "Kim", , "hwanistic@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0009-0009-3217-2417"))
 Maintainer: Jinhwan Kim <hwanistic@gmail.com>
-Description: Use google's large language models with API. This package utilizes
-    some functions of gemini API. For more information, please visit
-    "https://ai.google.dev/docs/gemini_api_overview".
+Description: Provides a comprehensive interface for Google Gemini API, 
+            enabling users to access and utilize Gemini Large Language Model (LLM) functionalities directly from R. 
+            This package facilitates seamless integration with Google Gemini, allowing for advanced language processing, 
+            text generation, and other AI-driven capabilities within the R environment.
+            For more information, please visit <https://ai.google.dev/docs/gemini_api_overview>.
 License: MIT + file LICENSE
+Depends: R (>= 4.0.0)
 URL: https://github.com/jhk0530/gemini.R
 BugReports: https://github.com/jhk0530/gemini.R/issues
 Encoding: UTF-8
