--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,5 @@
-pandoc: 3.1.12.2
-pkgdown: 2.0.9
+pandoc: '3.3'
+pkgdown: 2.1.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2024-05-11T13:43Z
-
+last_built: 2024-12-10T04:33Z
