chore: add rstudioapi dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,6 @@ importFrom(httr2,req_perform)
 importFrom(httr2,req_url_query)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
+importFrom(rstudioapi,executeCommand)
+importFrom(rstudioapi,getActiveDocumentContext)
+importFrom(rstudioapi,insertText)
