feat: various type of audio
close #9

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,4 @@ importFrom(httr2,resp_header)
 importFrom(rstudioapi,executeCommand)
 importFrom(rstudioapi,getActiveDocumentContext)
 importFrom(rstudioapi,insertText)
+importFrom(tools,file_ext)
