feat: support 2.0-flash-exp model, unit testing
close #8, #7

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(gemini_audio)
 export(gemini_chat)
 export(gemini_image)
 export(gen_docs)
+export(gen_tests)
 export(setAPI)
 importFrom(base64enc,base64encode)
 importFrom(cli,cli_alert)
