--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,14 @@ export(gemini_image.vertex)
 export(gen_docs)
 export(gen_tests)
 export(setAPI)
+export(setEnv)
 export(token.vertex)
 importFrom(base64enc,base64encode)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
+importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_div)
 importFrom(cli,cli_end)
 importFrom(cli,cli_status)
