--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ export(gemini_chat)
 export(gemini_image)
 export(gemini_image.vertex)
 export(gen_docs)
+export(gen_image)
 export(gen_tests)
 export(setAPI)
 export(setEnv)
 export(token.vertex)
+importFrom(base64enc,base64decode)
 importFrom(base64enc,base64encode)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_danger)
