feat: gemini search

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(gemini_audio.vertex)
 export(gemini_chat)
 export(gemini_image)
 export(gemini_image.vertex)
+export(gemini_search)
+export(gemini_searchR)
 export(gen_docs)
 export(gen_image)
 export(gen_tests)
@@ -30,12 +32,14 @@ importFrom(httr2,jwt_encode_sig)
 importFrom(httr2,req_body_file)
 importFrom(httr2,req_body_form)
 importFrom(httr2,req_body_json)
+importFrom(httr2,req_body_raw)
 importFrom(httr2,req_headers)
 importFrom(httr2,req_method)
 importFrom(httr2,req_perform)
 importFrom(httr2,req_url_query)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
+importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_header)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
