feat: gemini_docs
Document understanding with Gemini API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(gemini.vertex)
 export(gemini_audio)
 export(gemini_audio.vertex)
 export(gemini_chat)
+export(gemini_docs)
 export(gemini_image)
 export(gemini_image.vertex)
 export(gemini_search)
