feat: update gemini.R to version 0.14.0 and add support for reading PDF files in gemini_docs.vertex function - Updated package version in DESCRIPTION - Added export for gemini_docs.vertex in NAMESPACE - Enhanced gemini function with improved status code checks and parameter validation - Implemented gemini_docs.vertex function for document summarization and analysis - Improved error handling and validation across various functions - Updated documentation for new features and functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(gemini_audio)
 export(gemini_audio.vertex)
 export(gemini_chat)
 export(gemini_docs)
+export(gemini_docs.vertex)
 export(gemini_image)
 export(gemini_image.vertex)
 export(gemini_search)
