Add gemini_narrative function for table descriptions
Introduces the gemini_narrative function to generate narrative descriptions for data frames by converting them to markdown tables and sending prompts to Gemini. Updates NAMESPACE and documentation accordingly, and adds required imports.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(gemini_docs)
 export(gemini_docs.vertex)
 export(gemini_image)
 export(gemini_image.vertex)
+export(gemini_narrative)
 export(gemini_search)
 export(gemini_searchR)
 export(gen_docs)
@@ -38,6 +39,7 @@ importFrom(httr2,req_body_raw)
 importFrom(httr2,req_headers)
 importFrom(httr2,req_method)
 importFrom(httr2,req_perform)
+importFrom(httr2,req_timeout)
 importFrom(httr2,req_url_query)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
@@ -45,6 +47,7 @@ importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_header)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(knitr,kable)
 importFrom(rstudioapi,executeCommand)
 importFrom(rstudioapi,getActiveDocumentContext)
 importFrom(rstudioapi,insertText)
