Add gemini_structured function for structured API responses
Introduces the gemini_structured() function to request and return structured (JSON) responses from the Gemini API, with support for custom schemas and generation parameters. Updates NAMESPACE and documentation accordingly, and bumps package version to 0.15.0.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(gemini_image.vertex)
 export(gemini_narrative)
 export(gemini_search)
 export(gemini_searchR)
+export(gemini_structured)
 export(gen_docs)
 export(gen_image)
 export(gen_tests)
