feat: Add gemini_garden function
Introduces the gemini_garden() function to interact with the Vertex AI Model Garden (Mistral model) for processing PDF files, such as OCR. Updates NAMESPACE and documentation to export the new function and import required dependencies. Also updates gemini_narrative documentation to include the 'prompt' argument.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(gemini_audio.vertex)
 export(gemini_chat)
 export(gemini_docs)
 export(gemini_docs.vertex)
+export(gemini_garden)
 export(gemini_image)
 export(gemini_image.vertex)
 export(gemini_narrative)
@@ -46,6 +47,7 @@ importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
 importFrom(httr2,resp_header)
+importFrom(jsonlite,base64_enc)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(knitr,kable)
