--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,3 +54,4 @@ importFrom(rstudioapi,executeCommand)
 importFrom(rstudioapi,getActiveDocumentContext)
 importFrom(rstudioapi,insertText)
 importFrom(tools,file_ext)
+importFrom(utils,download.file)
