feat: gemma (text)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(gemini_narrative)
 export(gemini_search)
 export(gemini_searchR)
 export(gemini_structured)
+export(gemma)
 export(gen_docs)
 export(gen_image)
 export(gen_tests)
