feat: nano banana & util functions
Introduces the nano_banana() function for generating, editing, and transferring images using the Gemini API. Adds supporting utility functions (read_image, gemini_request, save_image, init_body, add_text, add_inline_data) and their documentation.
Updates NAMESPACE and DESCRIPTION for new exports and dependencies.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(gemma)
 export(gen_docs)
 export(gen_image)
 export(gen_tests)
+export(nano_banana)
 export(setAPI)
 export(setEnv)
 export(token.vertex)
@@ -43,6 +44,7 @@ importFrom(httr2,req_headers)
 importFrom(httr2,req_method)
 importFrom(httr2,req_perform)
 importFrom(httr2,req_timeout)
+importFrom(httr2,req_url_query)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_string)
