--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,16 @@
-pandoc: 3.6.4
+pandoc: 3.7.0.2
 pkgdown: 2.1.3
 pkgdown_sha: ~
-articles: {}
-last_built: 2025-06-06T12:34Z
+articles:
+  articles/audio_understanding: audio_understanding.html
+  articles/document_understanding: document_understanding.html
+  articles/gemini-R: gemini-R.html
+  articles/google-search: google-search.html
+  articles/image_generation: image_generation.html
+  articles/image_understanding: image_understanding.html
+  articles/rstudio-addin: rstudio-addin.html
+  articles/vertex-ai: vertex-ai.html
+last_built: 2025-09-01T07:48Z
 urls:
   reference: https://github.com/jhk0530/gemini.R/reference
   article: https://github.com/jhk0530/gemini.R/articles
