Deprecate gen_image and gemini_searchR, update docs
Deprecated the `gen_image` and `gemini_searchR` functions, updated documentation and README for clarity, and improved .Rbuildignore and .gitignore to better handle build artifacts and Quarto files. Updated DESCRIPTION for new dependencies and vignette builder, and added release notes for version 0.17.1.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,9 +3,17 @@
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
-^vignettes/articles$
+
 .github
 ^CRAN-SUBMISSION$
 ^cran-comments\.md$
 ^LICENSE\.md$
 ^README\.md$
+^NEWS\.md$
+^vignettes/articles$
+^vignettes/.quarto$
+^vignettes/articles/\.quarto$
+^vignettes/articles/*_files$
+^logo\.png$
+^logo\.svg$
+^favicon$
