--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gemini.R
 Title: Interface for 'Google Gemini' API
-Version: 0.17.0
+Version: 0.17.1
 Authors@R: c(
   person("Jinhwan", "Kim", , "hwanistic@gmail.com", role = c("aut", "cre", "cph"), comment = c(ORCID = "0009-0009-3217-2417")),
   person("Maciej", "Nasinski", role = "ctb"))
@@ -26,6 +26,9 @@ Imports:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests:
-  testthat (>= 3.0.0)
+    quarto,
+    rmarkdown,
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
-Config/Needs/website: rmarkdown
+Config/Needs/website: rmarkdown, quarto
+VignetteBuilder: quarto
