--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,15 +2,15 @@ pandoc: 3.7.0.2
 pkgdown: 2.1.3
 pkgdown_sha: ~
 articles:
-  articles/audio_understanding: audio_understanding.html
-  articles/document_understanding: document_understanding.html
-  articles/gemini-R: gemini-R.html
-  articles/google-search: google-search.html
-  articles/image_generation: image_generation.html
-  articles/image_understanding: image_understanding.html
-  articles/rstudio-addin: rstudio-addin.html
-  articles/vertex-ai: vertex-ai.html
-last_built: 2025-09-01T08:02Z
+  audio_understanding: audio_understanding.html
+  document_understanding: document_understanding.html
+  gemini-R: gemini-R.html
+  google-search: google-search.html
+  image_generation: image_generation.html
+  image_understanding: image_understanding.html
+  rstudio-addin: rstudio-addin.html
+  vertex-ai: vertex-ai.html
+last_built: 2025-09-01T08:36Z
 urls:
   reference: https://github.com/jhk0530/gemini.R/reference
   article: https://github.com/jhk0530/gemini.R/articles
